@@ -1,0 +1,6 @@
+classDiagram
+  class Monkey {
+    eat(food: Banana | Coconut) None
+    jump(height: Optional[int]) None
+    scream(volume: int | None) Sound
+  }
